WIP - reconfigure Graal NI instrumentation to use JDK 21 library